registeration page added v1

--- a/HeroSection/Hero-section-page1/style.css
+++ b/HeroSection/Hero-section-page1/style.css
@@ -50,7 +50,7 @@ body{
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-top: 1.2vw;
+  margin-top: 10%;
   height: 7%;
   position: sticky;
   top: 0px;
