--- a/aboutUs/aboutstyle.css
+++ b/aboutUs/aboutstyle.css
@@ -26,7 +26,7 @@
 
 body {
     height: 100vh;
-    width: 100vw;
+    /* width: 100vw;     */
 }
 
 /*NAVBAR STYLING*/
@@ -200,7 +200,7 @@ body {
 }
 
 .footer {
-    width: 100vw;
+    /* width: 100vw; */
     height: 15vh;
     background-color: #2C2E5B;
     display: flex;
