--- a/competition/compStyle.css
+++ b/competition/compStyle.css
@@ -25,7 +25,7 @@
 
 body {
     height: 100vh;
-    width: 100vw;
+    /* width: 100vw; */
 }
 
 /*NAVBAR STYLING*/
@@ -36,7 +36,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-top: 4vh;
+    margin-top: 5vh;
     height: 8%;
     border-radius: 0.4rem;
     position: sticky;
@@ -346,6 +346,7 @@ body {
  /* 16:9 aspect ratio */
     background: #2C2E5B;
     aspect-ratio: 16/ 9;
+    /* width: 100%; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -365,7 +366,7 @@ body {
 /*CSS for the footer part*/
 
 .footer {
-    width: 100vw;
+    /* width: 100vw; */
     height: 20vh;
     background-color: #2C2E5B;
     display: flex;
